--- a/styels.css
+++ b/styels.css
@@ -12,7 +12,13 @@ main {
     width: 100vw;
 }
 
+header {
+    margin: 24px 0 0 57px;
+}
+
 .container-left {
+    padding-left: 136px;
+    margin-top: 20%;
     display: inline-block;
     width: 60%;
 }
@@ -32,13 +38,15 @@ main {
 }
 
 h1 {
+    width: 368px;
     font-size: 70px;
     line-height: 80px;
 }
 
 p {
+    width: 540px;
     font-size: 28px;
-    line-height: 80px;
+    line-height: 48px;
     opacity: 0.6;
 }
 
@@ -52,4 +60,92 @@ button {
     border: none;
     color: white;
     font-size: 20px;
+}
+
+button:hover {
+    background: rgba(148, 153, 235, 0.8);
+    cursor: pointer;
+}
+
+button:active {
+    opacity: .6;
+}
+
+a {
+    font-size: 28px;
+    line-height: 41px;
+    color: #5D5D7D;
+    margin-right: 41px;
+    cursor: pointer;
+    text-decoration: none;
+
+}
+
+a:nth-child(2) {
+    opacity: 0.4;
+}
+
+a:hover {
+    opacity: 0.4;
+
+}
+
+a:active {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 900px) {
+    .container-left {
+        width: 100%;
+        height: 50vh;
+        padding: 0;
+        margin: 0;
+    }
+
+    .container-right {
+        width: 100%;
+        height: auto;
+        padding: 40px;
+        margin: 0;
+        position: static;
+        display: block;
+    }
+
+    .illustration {
+        position: static;
+        max-width: 90%;
+        height: auto;
+    }
+
+    header {
+        display: none;
+    }
+
+    h1 {
+        font-size: 36px;
+        line-height: 52px;
+        width: auto;
+        margin: 58px 50px 0 50px;
+        text-align: center;
+    }
+
+    p {
+        display: block;
+        width: auto;
+        margin: auto;
+        text-align: center;
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    button {
+        display: block;
+        margin: 30px auto;
+    }
+}
+
+@media screen and (max-width: 35px) {
+    .container-left {
+        height: 70%;
+    }
 }
